--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,10 @@
             <artifactId>heroku-maven-plugin</artifactId>
             <version>3.0.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
+        </dependency>
 
     </dependencies>
 
