--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -13,7 +13,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 # This is good because it means that you can test security protocols that
 # utilize database schemas for authorization.
 
-spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:mem:db;
 
 #The default username and password for h2 in memory database. You
 spring.datasource.username=sa
