--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -22,6 +22,7 @@ spring.datasource.password=sa
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.show-sql=true
 server.error.include-stacktrace=ALWAYS
+spring.h2.console.enabled=true
 
 spring.jpa.properties.hibernate.format_sql=true
 
